--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -13,40 +13,40 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-10 Sun 14:12]
+#+CAPTION: Clock summary at [2019-03-10 Sun 21:41]
 | <75>                                                         |         |       |       |       |
 | Headline                                                     | Time    |       |       |     % |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                 | *84:42* |       |       | 100.0 |
+| *Total time*                                                 | *85:56* |       |       | 100.0 |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                      | 84:42   |       |       | 100.0 |
-| Active                                                       |         | 84:42 |       | 100.0 |
+| Stories                                                      | 85:56   |       |       | 100.0 |
+| Active                                                       |         | 85:56 |       | 100.0 |
 | Edit release notes for previous sprint                       |         |       |  1:27 |   1.7 |
-| Sprint and product backlog grooming                          |         |       |  2:16 |   2.7 |
+| Sprint and product backlog grooming                          |         |       |  2:16 |   2.6 |
 | Implement text model generation chain in generation          |         |       |  3:45 |   4.4 |
-| Move generation model out of coding                          |         |       |  4:22 |   5.2 |
-| Rename endomodel to just model                               |         |       |  2:11 |   2.6 |
+| Move generation model out of coding                          |         |       |  4:22 |   5.1 |
+| Rename endomodel to just model                               |         |       |  2:11 |   2.5 |
 | Remove exomodel remnants                                     |         |       |  0:03 |   0.1 |
 | Consider adding a dot graph of the transforms to probing     |         |       |  1:47 |   2.1 |
 | Split annotations processing into two phases                 |         |       |  3:10 |   3.7 |
-| Move injection processing out of coding                      |         |       | 18:39 |  22.0 |
+| Move injection processing out of coding                      |         |       | 18:39 |  21.7 |
 | Create a extraction model post-processing chain              |         |       |  0:56 |   1.1 |
 | Move coding to generation model transform into orchestration |         |       |  0:33 |   0.6 |
-| Add option for northwind tests                               |         |       |  0:54 |   1.1 |
-| Add DTL to vcpkg                                             |         |       |  5:15 |   6.2 |
-| Remove coding options                                        |         |       |  3:59 |   4.7 |
-| Add basic "diff mode"                                        |         |       | 12:02 |  14.2 |
+| Add option for northwind tests                               |         |       |  0:54 |   1.0 |
+| Add DTL to vcpkg                                             |         |       |  5:15 |   6.1 |
+| Remove coding options                                        |         |       |  3:59 |   4.6 |
+| Add basic "diff mode"                                        |         |       | 12:02 |  14.0 |
 | Create a "run byproducts" directory                          |         |       |  1:01 |   1.2 |
 | Logging impact in tracing is blank                           |         |       |  0:50 |   1.0 |
-| Split operation reports from patches                         |         |       |  1:19 |   1.6 |
+| Split operation reports from patches                         |         |       |  1:19 |   1.5 |
 | Add org mode support to diff reports                         |         |       |  1:13 |   1.4 |
 | Add dry mode                                                 |         |       |  0:27 |   0.5 |
 | Split extraction model generation from code generation       |         |       |  0:29 |   0.6 |
-| Rework the system tests using diff mode                      |         |       | 14:57 |  17.7 |
+| Rework the system tests using diff mode                      |         |       | 14:57 |  17.4 |
 | Try to fix valgrind warning on =find_files=                  |         |       |  0:20 |   0.4 |
-| Rename the =transform= method to =apply=                     |         |       |  1:25 |   1.7 |
-| Fix northwind tests on OSX and Windows                       |         |       |  1:04 |   1.3 |
-| Update metrics in OpenHub                                    |         |       |  0:18 |   0.4 |
+| Rename the =transform= method to =apply=                     |         |       |  2:39 |   3.1 |
+| Fix northwind tests on OSX and Windows                       |         |       |  1:04 |   1.2 |
+| Update metrics in OpenHub                                    |         |       |  0:18 |   0.3 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -996,6 +996,8 @@ Not clear why this is coming out so we just ignored it for now.
 
 *** STARTED Rename the =transform= method to =apply=                  :story:
     :LOGBOOK:
+    CLOCK: [2019-03-10 Sun 21:15]--[2019-03-10 Sun 21:41] =>  0:26
+    CLOCK: [2019-03-10 Sun 14:12]--[2019-03-10 Sun 15:00] =>  0:48
     CLOCK: [2019-03-10 Sun 14:05]--[2019-03-10 Sun 14:11] =>  0:06
     CLOCK: [2019-03-10 Sun 13:31]--[2019-03-10 Sun 14:04] =>  0:33
     CLOCK: [2019-03-10 Sun 10:02]--[2019-03-10 Sun 10:43] =>  0:41
@@ -1123,6 +1125,10 @@ either for tests or for generation. This is more than just formatting:
 its basically "act as if this type was not defined in the input" or
 "this model did not exist". It should result in resolution failures if
 anyone is referring to the model/type.
+
+*** Update all exception names to match framework guiidelines         :story:
+
+Exceptions should end with "exception".
 
 *** Use DI in injection model                                         :story:
 
